스타일링: 주요 오퍼레이터 버튼 클래스명을 op-main으로 변경

--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
     <button class="op op-ac" op-data="ac">AC</button>
     <button class="op op-neg" op-data="negative">+/-</button>
     <button class="op op-percent" op-data="percent">%</button>
-    <button class="op op-dark op-divide" op-data="divide">÷</button>
+    <button class="op op-main op-divide" op-data="divide">÷</button>
     <button class="num-7" num-data="7">7</button>
     <button class="num-8" num-data="8">8</button>
     <button class="num-9" num-data="9">9</button>
-    <button class="op op-dark op-multi" op-data="multi">×</button>
+    <button class="op op-main op-multi" op-data="multi">×</button>
     <button class="num-4" num-data="4">4</button>
     <button class="num-5" num-data="5">5</button>
     <button class="num-6" num-data="6">6</button>
-    <button class="op op-dark op-minus" op-data="minus">−</button>
+    <button class="op op-main op-minus" op-data="minus">−</button>
     <button class="num-1" num-data="1">1</button>
     <button class="num-2" num-data="2">2</button>
     <button class="num-3" num-data="3">3</button>
-    <button class="op op-dark op-plus" op-data="plus">+</button>
+    <button class="op op-main op-plus" op-data="plus">+</button>
     <button class="num-0" num-data="0">0</button>
     <button class="num-dot" num-data=".">.</button>
-    <button class="op op-dark op-eql" op-data="eql">=</button>
+    <button class="op op-main op-eql" op-data="eql">=</button>
   </div>
   <script src="calculator.js"></script>
 </body>
